@@ -1,6 +1,8 @@
-$Id: ChangeLog,v 1.60 2004/04/17 21:57:32 manuelbi Exp $
+$Id: ChangeLog,v 1.61 2004/04/18 11:57:41 h_oudejans Exp $
 
-2004-04-18 Fullscreen button in windows works.
+2004-04-18 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Fullscreen button in windows works.
+	* removed segfault in ChangeJoystickport
 
 2004-04-17 Manuel Bilderbeek <manuel@msxnet.org>
 	* added loads of tooltips to the wxg files and changed some texts
